--- a/05-dom-document-loading/2-sortable-table-v1/index.html
+++ b/05-dom-document-loading/2-sortable-table-v1/index.html
@@ -28,8 +28,8 @@
 
 <script type="module">
   import SortableTable from './index.js';
-  import data from './products-data.js';
-
+  import data from './products-data';
+  
   const headerConfig = [
     {
       id: 'images',
