--- a/05-dom-document-loading/2-sortable-table-v1/index.html
+++ b/05-dom-document-loading/2-sortable-table-v1/index.html
@@ -71,14 +71,13 @@
 
   const sortableTable = new SortableTable(headerConfig, data);
 
-  root.append(sortableTable.element.firstElementChild);
+  root.append(sortableTable.element);
 
   sort.addEventListener('click', () => {
     const fieldValue = field.value;
     const orderValue = order.value;
 
     sortableTable.sort(fieldValue, orderValue);
-    console.log(sortableTable.subElements.body.firstElementChild.children[0]);
   });
 </script>
 </body>
